Script output pronto

--- a/SolucaoApiCorreios/AplicacaoWebCorreios/index.html
+++ b/SolucaoApiCorreios/AplicacaoWebCorreios/index.html
@@ -21,11 +21,11 @@
                     <div class="row">
                         <div class="col-md-6"><input class="w-100 mt-2 mb-2" type="text" id="nCdServico"
                                 placeholder="Codigo de Serviço"></div>
-                        <div class="col-md-6"><input class="w-100 mt-2 mb-2" type="text" id="nCepOrigem"
+                        <div class="col-md-6"><input class="w-100 mt-2 mb-2" type="text" id="sCepOrigem"
                                 placeholder="CEP de Origem"></div>
                     </div>
                     <div class="row">
-                        <div class="col-md-6"><input class="w-100 mt-2 mb-2" type="text" id="nCepDestino"
+                        <div class="col-md-6"><input class="w-100 mt-2 mb-2" type="text" id="sCepDestino"
                                 placeholder="CEP de Destino"></div>
                         <div class="col-md-6"><input class="w-100 mt-2 mb-2" type="number" id="nVlPeso"
                                 placeholder="Valor Peso"></div>
@@ -54,7 +54,7 @@
             </div>
         </div>
     </section>
-    <script src="Scripts/jquery-3.0.0.min.js"></script>
+    <script src="Scripts/jquery-3.4.1.min.js"></script>
     <script src="Scripts/inputmask/min/inputmask.min.js"></script>
     <script src="Utils/scripts.js"></script>
 </body>
