--- a/SolucaoApiCorreios/AplicacaoWebCorreios/index.html
+++ b/SolucaoApiCorreios/AplicacaoWebCorreios/index.html
@@ -19,35 +19,53 @@
                 </div>
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-md-6"><input class="w-100 mt-2 mb-2" type="text" id="nCdServico"
-                                placeholder="Codigo de Serviço"></div>
-                        <div class="col-md-6"><input class="w-100 mt-2 mb-2" type="text" id="sCepOrigem"
-                                placeholder="CEP de Origem"></div>
+                        <div class="col-md-6">
+                            <input class="w-100 mt-2 mb-2" type="text" id="nCdServico"
+                                   placeholder="Codigo de Serviço">
+                        </div>
+                        <div class="col-md-6">
+                            <input class="w-100 mt-2 mb-2" type="text" id="sCepOrigem"
+                                   placeholder="CEP de Origem">
+                        </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-6"><input class="w-100 mt-2 mb-2" type="text" id="sCepDestino"
-                                placeholder="CEP de Destino"></div>
-                        <div class="col-md-6"><input class="w-100 mt-2 mb-2" type="number" id="nVlPeso"
-                                placeholder="Valor Peso"></div>
+                        <div class="col-md-6">
+                            <input class="w-100 mt-2 mb-2" type="text" id="sCepDestino"
+                                   placeholder="CEP de Destino">
+                        </div>
+                        <div class="col-md-6">
+                            <input class="w-100 mt-2 mb-2" type="number" id="nVlPeso"
+                                   placeholder="Valor Peso">
+                        </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-6"><input class="w-100 mt-2 mb-2" type="number" id="nVlComprimento"
-                                placeholder="Valor Comprimento"></div>
-                        <div class="col-md-6"><input class="w-100 mt-2 mb-2" type="number" id="nVlAltura"
-                                placeholder="Valor Altura"></div>
+                        <div class="col-md-6">
+                            <input class="w-100 mt-2 mb-2" type="number" id="nVlComprimento"
+                                   placeholder="Valor Comprimento">
+                        </div>
+                        <div class="col-md-6">
+                            <input class="w-100 mt-2 mb-2" type="number" id="nVlAltura"
+                                   placeholder="Valor Altura">
+                        </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-6"><input class="w-100 mt-2 mb-2" type="number" id="nVlLargura"
-                                placeholder="Valor Largura"></div>
-                        <div class="col-md-6"><input class="w-100 mt-2 mb-2" type="number" id="nVlDiametro"
-                                placeholder="Valor Diametro"></div>
+                        <div class="col-md-6">
+                            <input class="w-100 mt-2 mb-2" type="number" id="nVlLargura"
+                                   placeholder="Valor Largura">
+                        </div>
+                        <div class="col-md-6">
+                            <input class="w-100 mt-2 mb-2" type="number" id="nVlDiametro"
+                                   placeholder="Valor Diametro">
+                        </div>
                     </div>
 
-                    <hr/>   
+                    <hr />
 
                     <div class="row align-items-center text-center">
-                        <div class="col-md-12"><input class="w-25 mt-2 mb-2" type="button" id="buttonEnviar"
-                                value="Enviar"></div>
+                        <div class="col-md-12">
+                            <input class="w-25 mt-2 mb-2" type="button" id="buttonEnviar"
+                                   value="Enviar">
+                        </div>
 
                     </div>
                 </div>
