Correção campos de cep

--- a/SolucaoApiCorreios/AplicacaoWebCorreios/index.html
+++ b/SolucaoApiCorreios/AplicacaoWebCorreios/index.html
@@ -30,11 +30,11 @@
                                 <option value="40290">40290 SEDEX Hoje Varejo*</option>
                             </select>
                         </div>
-                        <div class="col-md-6"><input class="w-100 mt-2 mb-2" type="text" id="nCepOrigem"
+                        <div class="col-md-6"><input class="w-100 mt-2 mb-2" type="text" id="sCepOrigem"
                                 placeholder="CEP de Origem"></div>
                     </div>
                     <div class="row">
-                        <div class="col-md-6"><input class="w-100 mt-2 mb-2" type="text" id="nCepDestino"
+                        <div class="col-md-6"><input class="w-100 mt-2 mb-2" type="text" id="sCepDestino"
                                 placeholder="CEP de Destino"></div>
                         <div class="col-md-6"><input class="w-100 mt-2 mb-2" type="number" id="nVlPeso"
                                 placeholder="Valor Peso"></div>
