script pronto para fazer a front dos retornos

--- a/SolucaoApiCorreios/AplicacaoWebCorreios/index.html
+++ b/SolucaoApiCorreios/AplicacaoWebCorreios/index.html
@@ -30,32 +30,32 @@
                                 <option value="40290">40290 SEDEX Hoje Varejo*</option>
                             </select>
                         </div>
-                        <div class="col-md-6"><input class="w-100 mt-2 mb-2" type="text" id="sCepOrigem"
+                        <div class="col-md-6"><input class="w-100 mt-2 mb-2" type="text" id="sCepOrigem" value="89057520"
                                 placeholder="CEP de Origem"></div>
                     </div>
                     <div class="row">
-                        <div class="col-md-6"><input class="w-100 mt-2 mb-2" type="text" id="sCepDestino"
+                        <div class="col-md-6"><input class="w-100 mt-2 mb-2" type="text" id="sCepDestino" value="89050130"
                                 placeholder="CEP de Destino"></div>
-                        <div class="col-md-6"><input class="w-100 mt-2 mb-2" type="number" id="nVlPeso"
+                        <div class="col-md-6"><input class="w-100 mt-2 mb-2" type="number" id="nVlPeso" value="2"
                                 placeholder="Valor Peso"></div>
                     </div>
                     <div class="row">
                         <div class="col-md-6">
-                            <input class="w-100 mt-2 mb-2" type="number" id="nVlComprimento"
+                            <input class="w-100 mt-2 mb-2" type="number" id="nVlComprimento" value="40"
                                    placeholder="Valor Comprimento">
                         </div>
                         <div class="col-md-6">
-                            <input class="w-100 mt-2 mb-2" type="number" id="nVlAltura"
+                            <input class="w-100 mt-2 mb-2" type="number" id="nVlAltura" value="20"
                                    placeholder="Valor Altura">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-6">
-                            <input class="w-100 mt-2 mb-2" type="number" id="nVlLargura"
+                            <input class="w-100 mt-2 mb-2" type="number" id="nVlLargura" value="20"
                                    placeholder="Valor Largura">
                         </div>
                         <div class="col-md-6">
-                            <input class="w-100 mt-2 mb-2" type="number" id="nVlDiametro"
+                            <input disabled class="w-100 mt-2 mb-2" type="number" id="nVlDiametro" value="0"
                                    placeholder="Valor Diametro">
                         </div>
                     </div>
