tudo 100% só falta arrumar o html :p

--- a/SolucaoApiCorreios/AplicacaoWebCorreios/index.html
+++ b/SolucaoApiCorreios/AplicacaoWebCorreios/index.html
@@ -8,10 +8,10 @@
     <link href="Utils/styles.css" rel="stylesheet" />
 </head>
 
-<body class="bg-dark">
-    <section class="container bg-primary h-100">
+<body>
+    <section class="container h-100">
         <div class="row h-100 align-items-center">
-            <div class="card m-5 w-100">
+            <div class="card m-5  w-100">
                 <div class="card-header bg-dark">
                     <h3 class="text-primary text-center">
                         API Correio
@@ -64,7 +64,7 @@
 
                     <div class="row align-items-center text-center">
                         <div class="col-md-12">
-                            <input class="w-25 mt-2 mb-2" type="button" id="buttonEnviar"
+                            <input class="btn btn-primary w-25 mt-2 mb-2" type="button" id="buttonEnviar"
                                    value="Enviar">
                         </div>
                     </div>
