--- a/SolucaoApiCorreios/AplicacaoWebCorreios/index.html
+++ b/SolucaoApiCorreios/AplicacaoWebCorreios/index.html
@@ -11,7 +11,7 @@
 <body>
     <section class="container h-100">
         <div class="row h-100 align-items-center justify-content-center">
-            <div class="card m-5  w-75">
+            <div class="card m-5  w-80">
                 <div class="card-header bg-dark">
                     <h3 class="text-primary text-center">
                         API Correio
@@ -21,10 +21,10 @@
                     <form class="needs-validation" novalidate>
                         <div class="form-row">
                             <div class="col-md-6 mb-3">
-                                <label for="validationCustom01">Tipo de serviço</label>
+                                <label for="nCdServico">Tipo de serviço</label>
                                 <div class="form-group">
-                                    <select id="nCdServico" class="custom-select" required>
-                                        <option value="">Clique aqui para selecionar</option>
+                                    <select id="nCdServico" class="custom-select browser-default form-control is-invalid" required>
+                                        <option value="nulo">Clique aqui para selecionar</option>
                                         <option value="04014">04014 SEDEX à vista</option>
                                         <option value="04065">04065 SEDEX à vista pagamento na entrega</option>
                                         <option value="04510">04510 PAC à vista</option>
@@ -34,21 +34,21 @@
                                         <option value="40290">40290 SEDEX Hoje Varejo*</option>
                                     </select>
                                     <div class="invalid-feedback">Selecione um campo</div>
-                                </div>
-                                <div class="valid-feedback">
-                                    Tudo certo!
+                                    <div class="valid-feedback">
+                                        Tudo certo!
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-md-3 mb-3">
-                                <label for="validationCustom02">CEP Origem</label>
-                                <input class="form-control" type="text" id="sCepOrigem" placeholder="Insira o CEP origem aqui" required>
+                                <label for="sCepOrigem">CEP Origem</label>
+                                <input class="form-control is-invalid" type="text" id="sCepOrigem" placeholder="Insira o CEP origem" required>
                                 <div class="valid-feedback">
                                     Tudo certo!
                                 </div>
                             </div>
                             <div class="col-md-3 mb-3">
                                 <label for="validationCustom03">CEP Destino</label>
-                                <input class="form-control" type="text" id="sCepDestino" placeholder="Insira o CEP destino aqui" required>
+                                <input class="form-control is-invalid" type="text" id="sCepDestino" placeholder="Insira o CEP destino" required>
                                 <div class="valid-feedback">
                                     Tudo certo!
                                 </div>
@@ -58,13 +58,16 @@
                             <div class="col-md-6">
                                 <label for="validationCustom04">Formato de envio</label>
                                 <div class="form-group">
-                                    <select id="nCdFormato" class="custom-select" required>
+                                    <select id="nCdFormato" class="custom-select is-invalid" required>
                                         <option value="">Clique aqui para selecionar</option>
                                         <option value="1">Formato caixa/pacote</option>
                                         <option value="2">Formato rolo/prisma</option>
                                         <option value="3">Envelope</option>
                                     </select>
                                     <div class="invalid-feedback">Selecione um campo</div>
+                                    <div class="valid-feedback">
+                                        Tudo certo!
+                                    </div>
                                 </div>
                                 <div class="valid-feedback">
                                     Tudo certo!
@@ -73,7 +76,7 @@
                             <div class="col-md-2">
                                 <label for="validationCustom05">Peso</label>
                                 <div class="input-group">
-                                    <input class="form-control" type="number" id="nVlPeso" value="5" placeholder="Kg" required>
+                                    <input class="form-control is-invalid" min="0" type="number" id="nVlPeso" placeholder="Kg" required>
                                     <div class="input-group-append">
                                         <span class="input-group-text bg-dark text-primary" id="inputGroupPeso">Kg</span>
                                     </div>
@@ -85,7 +88,7 @@
                             <div class="col-md-2 ">
                                 <label for="validationCustom06">Comprimento</label>
                                 <div class="input-group">
-                                    <input class="form-control" type="number" id="nVlComprimento" value="40" placeholder="cm" required>
+                                    <input class="form-control is-invalid" min="0" type="number" id="nVlComprimento" placeholder="cm" required>
                                     <div class="input-group-append">
                                         <span class="input-group-text bg-dark text-primary" id="inputGroupPeso">cm</span>
                                     </div>
@@ -97,7 +100,7 @@
                             <div class="col-md-2">
                                 <label for="validationCustom07">Largura</label>
                                 <div class="input-group">
-                                    <input class="form-control" type="number" id="nVlLargura" value="20" placeholder="cm" required>
+                                    <input class="form-control is-invalid" min="0" type="number" id="nVlLargura" placeholder="cm" required>
                                     <div class="input-group-append">
                                         <span class="input-group-text bg-dark text-primary" id="inputGroupPeso">cm</span>
                                     </div>
@@ -113,7 +116,7 @@
                             <div class="col-md-2 mb-3">
                                 <label for="validationCustom08">Altura</label>
                                 <div class="input-group">
-                                    <input class="form-control" type="number" id="nVlAltura"  value="20" placeholder="cm" required>
+                                    <input class="form-control is-invalid" min="0" type="number" id="nVlAltura" placeholder="cm" required>
                                     <div class="input-group-append">
                                         <span class="input-group-text bg-dark text-primary" id="inputGroupPeso">cm</span>
                                     </div>
@@ -125,7 +128,7 @@
                             <div class="col-md-2 mb-3">
                                 <label for="validationCustom09">Diâmetro</label>
                                 <div class="input-group">
-                                    <input class="form-control" type="number" id="nVlDiametro"  placeholder="cm" required>
+                                    <input class="form-control is-invalid" min="0" type="number" id="nVlDiametro"  placeholder="cm" required>
                                     <div class="input-group-append">
                                         <span class="input-group-text bg-dark text-primary"  id="inputGroupPeso">cm</span>
                                     </div>
@@ -136,28 +139,34 @@
                             </div>
                         </div>
                         <div class="form-row align-content-center justify-content-center"   >
-                            <div class="col-md-2 mb-3">
+                            <div class="col-md-3 mb-3">
                                 <label for="validationCustom09">Mão Propria</label>
                                 <div class="custom-control custom-radio">
-                                    <input type="radio" class="custom-control-input" id="sCdMaoPropria1" value="s" name="maoPropria" required>
+                                    <input type="radio" class="custom-control-input is-invalid" id="sCdMaoPropria1" value="s" name="maoPropria" required>
                                     <label class="custom-control-label" for="sCdMaoPropria1">Sim</label>
                                 </div>
                                 <div class="custom-control custom-radio mb-3">
-                                    <input type="radio" class="custom-control-input" id="sCdMaoPropria2" value="n" name="maoPropria" required>
+                                    <input type="radio" class="custom-control-input is-invalid" id="sCdMaoPropria2" value="n" name="maoPropria" required>
                                     <label class="custom-control-label" for="sCdMaoPropria2">Não</label>
                                     <div class="invalid-feedback">Selecione uma opção</div>
+                                    <div class="valid-feedback">
+                                        Tudo certo!
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-md-3 mb-3">
                                 <label for="validationCustom09">Aviso de Recebimento</label>
                                 <div class="custom-control custom-radio">
-                                    <input type="radio" class="custom-control-input" id="sCdAvisoRecebimento1" value="s" name="avisoReceb" required>
+                                    <input type="radio" class="custom-control-input is-invalid" id="sCdAvisoRecebimento1" value="s" name="avisoReceb" required>
                                     <label class="custom-control-label" for="sCdAvisoRecebimento1">Sim</label>
                                 </div>
                                 <div class="custom-control custom-radio mb-3">
-                                    <input type="radio" class="custom-control-input" id="sCdAvisoRecebimento2" value="n" name="avisoReceb" required>
+                                    <input type="radio" class="custom-control-input is-invalid" id="sCdAvisoRecebimento2" value="n" name="avisoReceb" required>
                                     <label class="custom-control-label" for="sCdAvisoRecebimento2">Não</label>
                                     <div class="invalid-feedback">Selecione uma opção</div>
+                                    <div class="valid-feedback">
+                                        Tudo certo!
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-md-3 mb-3">
@@ -166,7 +175,10 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text bg-dark text-primary" id="inputGroupPeso">R$</span>
                                     </div>
-                                    <input class="form-control" type="number" id="nVlValorDeclarado" value="0" placeholder="Valor em reais" required>
+                                    <input class="form-control is-valid" min="0" type="number" id="nVlValorDeclarado" value="0" placeholder="Valor em reais" required>
+                                    <div class="invalid-feedback">
+                                        Informar "0" caso não utilizar
+                                    </div>
                                     <div class="valid-feedback">
                                         Tudo certo!
                                     </div>
@@ -174,14 +186,13 @@
                             </div>
                         </div>
                     </form>
-                        <hr />
+                    <hr/>
 
-                        <div class="row align-items-center text-center">
-                            <div class="col-md-12">
-                                <input class="btn btn-primary w-25 mt-2 mb-2" type="button" id="buttonEnviar"
-                                       value="Enviar">
-                            </div>
+                    <div class="row align-items-center text-center">
+                        <div class="col-md-12">
+                            <button class="btn btn-primary w-25 mt-2 mb-2" type="submit" id="buttonEnviar">Enviar</button>
                         </div>
+                    </div>
                 </div>
             </div>
         </div>
